# frame

./: .gitignore
.github/workflows/: server.yml
agent/: README.md  main.py
cli/: Cargo.toml  main.py
cli/src/: main.rs
server/: Cargo.toml  Dockerfile  main.py
server/src/: main.rs
