[package]
name = "frame-server"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sled = "0.34.7"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
